Update footer text - contact us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -89,7 +89,7 @@
                     <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2020 JoinStack.</small>
+            <small class="footer_legal">© 2020 JoinStack. All Rights Reserved.</small>
         </nav>   
     </footer>
 </body>
