--- a/coming-soon.html
+++ b/coming-soon.html
@@ -41,7 +41,7 @@
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
-            <h3 class="logo_footer">JoinStack</h3>
+            <h3 class="logo_footer">Joinstack</h3>
             <p class="footer_slogan">We help brands all over the world to create impressive products.</p>
             </section>
             <section class="footer_col">
@@ -64,7 +64,7 @@
                     <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2020 JoinStack. All Rights Reserved.</small>
+            <small class="footer_legal">© 2021 JoinStack. All Rights Reserved.</small>
         </nav>   
     </footer>
     <script src="js/main.js"></script>
