--- a/jobs.html
+++ b/jobs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>JoinStack | Developing software that matters</title>
+    <title>Joinstack | Developing software that matters</title>
     <meta name="description" content="Hello! We are JoinStack, we build apps, products and experiences that
     represent you. Your product. Your company. Your audience.">
     <meta name="keywords" content="Software Development, Web Agency, Software Company, App Development, UX, Web Design,
@@ -44,7 +44,7 @@
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
-            <h3 class="logo_footer">JoinStack</h3>
+            <h3 class="logo_footer">Joinstack</h3>
             <p class="footer_slogan">We help brands all over the world to create impressive products.</p>
             </section>
             <section class="footer_col">
@@ -67,7 +67,7 @@
                     <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2020 JoinStack.</small>
+            <small class="footer_legal">© 2021 Joinstack. All Rights Reserved.</small>
         </nav>   
     </footer>
 </body>
