Updating header and footer

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>JoinStack | Developing software that matters</title>
+    <title>Joinstack | Developing software that matters</title>
     <meta name="description" content="Hello! We are JoinStack, we build apps, products and experiences that
     represent you. Your product. Your company. Your audience.">
     <meta name="keywords" content="Software Development, Web Agency, Software Company, App Development, UX, Web Design,
