--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2021 JoinStack. All Rights Reserved.</small>
+            <small class="footer_legal">© 2021 Joinstack. All Rights Reserved.</small>
         </nav>   
     </footer>
     <script src="js/typewriter.js"></script>
